--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,6 +1,6 @@
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "inevitable-rust-rewrite" ]
   pull_request:
     branches: [ "main" ]
     
